--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "restaurant-page",
+  "name": "dropdown-menu-practice",
   "version": "1.0.0",
   "description": "",
   "private": true,
